quick fix and renaming of project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tap Race Arena - Gorbagana Testnet</title>
+    <title>Tap 2 Rekt - Gorbagana Testnet</title>
     <meta name="description" content="Lightning-fast 1v1 tapping battles on Gorbagana testnet" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Tap Race Arena - Gorbagana Testnet" />
+    <meta property="og:title" content="Tap 2 Rekt - Gorbagana Testnet" />
     <meta property="og:description" content="Lightning-fast 1v1 tapping battles on Gorbagana testnet" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
